# axiom

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  environment.yml  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  test.py
.github/: issue-branch.yml
.github/workflows/: ci.yml  create-issue-branch.yml  pypi-release.yml  python-package-conda.yml
axiom/: __init__.py  ccam_test.sh  config.py  conversion.py  converters.py  decorators.py  drs.old.py  drs.py  drsnew.py  exceptions.py  parsers.py  report.py  supervisor.py  utilities.py
axiom/automation/: __init__.py
axiom/data/: domains.ini  domains.json  drs.json  models.json  projects.json
axiom/data/schemas/: cordex-cmip6.json  cordex-day.json  cordex-fx.json  cordex-month.json  cordex.json  mrd-0.1.0.json
axiom/drs/: __init__.py  cli.py  domain.py  payload.py  utilities.py
axiom/drs/processing/: __init__.py  ccam.py
axiom/indices/: __init__.py  indices.py
axiom/metadata/: __init__.py  templates.py
axiom/qa/: __init__.py  cli.py
axiom/schemas/: __init__.py
axiom/tests/: test_config.py  test_converters.py  test_decorators.py  test_drs.py  test_drs_utilities.py  test_payloads.py  test_supervisor.py  test_utilities.py
axiom/tests/data/: mrd.xml
axiom/validate/: __init__.py  specification.py  validator.py
axiom/validation/: __init__.py  validator.py
docs/: requirements.txt
docs/source/: about.rst  api.rst  axiom.drs.processing.rst  axiom.drs.rst  axiom.rst  axiom.validation.rst  cli.rst  conf.py  conversion.rst  drs.rst  drs_configuration.rst  index.rst  installation.rst  modules.rst  payloads.rst  performance.rst  qa.rst  reporting.rst  schemas.rst
docs/source/drs/: configuration copy.rst  configuration.rst  custom_processors.rst  fault-tolerance.rst  index.rst  payloads.rst  typical-workflow.rst
docs/source/schemas/: schemas.rst
specifications/: cordex-day.json  cordex-fx.json  cordex-month.json  cordex_var_info_day.csv  cordex_var_info_fx.csv  cordex_var_info_mon.csv  mrd-0.2.0.json  mrd.xsd
