[metadata]
name = axiom
author = Ben Schreoter
author_email = ben.schroeter@csiro.au
license = MIT
description = A prototype utility for validating/applying metadata templates for scientific data.
long_description = file: README.md

url = https://github.com/AusClimateService/axiom
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
scripts = bin/axiom
include_package_data = True
python_requires = >=3.11
install_requires =
    xarray >= 2022.3.0
    netCDF4 >= 1.5.8
    h5netcdf >= 1.0.0
    cerberus >= 1.3.4
    tabulate >= 0.8.9
    dask >= 2022.8.1
    distributed >= 2022.8.1
    tqdm >= 4.64.1
    Jinja2 >= 3.1.2

[aliases]
test = pytest

[tool:pytest]
addopts = -v
testpaths = axiom/tests
markers = 
    flaky: flaky tests
    network: tests that require network access
    slow: slow tests
